manifests/tenants/my-tenant/identity/kanidm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-tenant-identity
  labels:
    app.kubernetes.io/managed-by: company-as-code
