manifests/tenants/my-tenant/identity/kanidm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm
  namespace: my-tenant-identity
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kanidm
  ports:
    - name: https
      port: 443
      targetPort: 8443
    - name: ldap
      port: 3636
      targetPort: 3636
