manifests/tenants/my-tenant/identity/kanidm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanidm
  namespace: my-tenant-identity
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: idp.TEMPLATE_DOMAIN
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - idp.TEMPLATE_DOMAIN
      secretName: kanidm-tls
  rules:
    - host: idp.TEMPLATE_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kanidm
                port:
                  number: 443
